[package]
name = "schnorr-musig2"
version = "0.0.0"
edition = "2021"

description = "A Rust library for setup simple Schnorr Musig2 interaction."
documentation = "https://docs.rs/schnorr-musig2"
readme = "README.md"
repository = "https://github.com/0xdavid7/schnorr-musig2"
keywords = ["schnorr", "musig2", "bitcoin"]
categories = ["cryptography"]
license = "MIT"
authors = ["David Tran <tranhuyducseven@gmail.com>"]

[dependencies]
anyhow = "1.0.98"
bitcoin = "0.32.6"
k256 = "0.13.4"
lazy_static = "1.5.0"
thiserror = "2.0.12"
